--- a/app/public/css/site.css
+++ b/app/public/css/site.css
@@ -36,7 +36,7 @@ ul#menu li {
     color: #222831;
 		/*text outline code*/
 		-webkit-text-stroke-width: 2px;
-		-webkit-text-stroke-color: #e59494;
+		-webkit-text-stroke-color: #DC143C;
 }
 
 #logo span {
@@ -48,7 +48,7 @@ ul#menu li {
 
 
 .active {
-	 color: #e59494;
+	 color: #DC143C;
 }
 
 a
@@ -59,7 +59,7 @@ a
 a:hover
 {
 	text-decoration: none;
-	color: #e59494;
+	color: #DC143C;
 }
 
 
@@ -81,20 +81,6 @@ h1, h2, h3, h4, h5, h6{
 {
 	overflow: hidden;
 	border-top: 1px solid #dbdbdb;
-}
-
-.myalbum{
-margin: auto;
-width: 90%;
-border: 3px solid #e59494;
-padding: 10px;
-text-align: center;
-}
-
-.myalbum div {
-  display: inline-block;
-  margin: auto;
-  text-align: center;
 }
 
 /* Buttons                                                                        */
@@ -119,7 +105,7 @@ text-align: center;
 
 .button:hover
 {
-	background: #e59494;
+	background: #DC143C;
 	color: #FFF !important;
 }
 
@@ -140,7 +126,7 @@ text-align: center;
 	font-family: BentonSansRegular, Arial, serif;
 	font-weight: normal;
 	text-align: left;
-	border-top: 6px solid #e59494;
+	border-top: 6px solid #DC143C;
 	margin-top: 2em;
 }
 
