--- a/app/public/css/site.css
+++ b/app/public/css/site.css
@@ -86,7 +86,6 @@ h1, h2, h3, h4, h5, h6{
 /* Buttons                                                                        */
 .button
 {
-	position: relative;
 	display: inline-block;
 	padding: 0.8em 1.5em;
 	background: #1d1d1d;
@@ -107,10 +106,6 @@ h1, h2, h3, h4, h5, h6{
 {
 	background: #DC143C;
 	color: #FFF !important;
-}
-
-.goupper {
-    margin: -10px 0 5px;
 }
 
 
@@ -152,6 +147,7 @@ h1, h2, h3, h4, h5, h6{
 
 #bigheader {
 	margin-top: 1em;
+  display: inline-block;
 }
 
 /*********************************************************************************/
